fix: otp-1208: Gui Layout bug on configure alignment

--- a/grails-app/assets/stylesheets/otp.less
+++ b/grails-app/assets/stylesheets/otp.less
@@ -1581,7 +1581,7 @@ td div {
 }
 
 .alignmentTable {
-    input {
+    input[type=text] {
         min-width: 350px;
     }
     input[type=checkbox] {
@@ -1593,6 +1593,9 @@ td div {
     td, th {
         padding-left: 5px;
         padding-right: 5px;
+    }
+    input [type=submit]{
+        max-width:40px;
     }
 }
 
